--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
      # build image
      - run: |         
          docker info
-         docker build -t catalogApi -f Dockerfile .
+         docker build -t catalogapi -f Dockerfile .
 
      # deploy the image
      - run: |  
          docker login --username=pinaki.best@gmail.com --password=8fe0c4d9-c792-4685-8d42-fa264e504f10 registry.heroku.com
-         docker tag catalogApi registry.heroku.com/catalogapi-pinaki/web
+         docker tag catalogapi registry.heroku.com/catalogapi-pinaki/web
          docker push registry.heroku.com/catalogapi-pinaki/web                
          curl https://cli-assets.heroku.com/install.sh | sh
          heroku container:release web --app catalogapi-pinaki
